# -Engineering-Portfolio

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/1_infrastructure/: README.md  gcp_postgres_governor.py
src/1_infrastructure/docs/: architecture.md  design_decisions.md
src/1_infrastructure/tests/: test_governor.py
src/2_backend/: README.md  backend_workflow_example.py  deterministic_ai_service.py
src/3_frontend/: StrategicChatView.tsx
src/backend/: README.md  deterministic_ai_service.py
src/frontend/: StrategicChatView.tsx
src/infrastructure/: README.md
src/tests/: test_business_logic.py
src/tests/1_infrastructure/: test_governor.py
src/tests/2_backend/: deterministic_ai_service.py
src/tests/infrastructure/: test_governor.py
tests/infrastructure/: test_governor.py
